[tool.poetry]
name = "arcanearts"
version = "0.1.0"
description = ""
authors = ["direpeacock <dire.d.peacock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
diffusers = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
